--- a/kubernetes/talos/ingress/loki.yaml
+++ b/kubernetes/talos/ingress/loki.yaml
@@ -1,22 +1,22 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: longhorn-ingress
-  namespace: longhorn-system
+  name: loki-ingress
+  namespace: monitoring
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - longhorn.trahan.dev
+        - loki.trahan.dev
       secretName: trahan-dev-cert
   rules:
-    - host: "longhorn.trahan.dev"
+    - host: "loki.trahan.dev"
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
-                name: longhorn-frontend
+                name: loki
                 port:
-                  number: 80
+                  number: 3100
