--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -3,12 +3,7 @@ upstream minio_s3 {
     server minio1.trahan.dev:9000;
 }
 
-upstream minio_console {
-    least_conn;
-    server minio1.trahan.dev:9000;
-}
-
-  server {
+server {
   listen 80 http2 default_server;
   return 301 https://$host$request_uri;
 }
@@ -30,48 +25,46 @@ server {
     ssl_prefer_server_ciphers off;
     ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA";
 
-    access_log /dev/stdout;
-    error_log /dev/stdout info;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log info;
+
     location / {
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 300;
-        # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        chunked_transfer_encoding off;
-
-        # pass to upstream LB pool
         proxy_pass http://minio_s3;
-    }
-
-    location /minio/ui/ {
-        rewrite ^/minio/ui/(.*) /$1 break;
-        proxy_set_header Host $http_host;
+        proxy_set_header Host domain;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-NginX-Proxy true;
-
-        # This is necessary to pass the correct IP to be hashed
-        real_ip_header X-Real-IP;
-
-        proxy_connect_timeout 300;
-
-        # To support websockets in MinIO versions released after January 2023
         proxy_http_version 1.1;
+        # proxy_hide_header Upgrade;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        # Some environments may encounter CORS errors (Kubernetes + Nginx Ingress)
-        # Uncomment the following line to set the Origin request to an empty string
-        # proxy_set_header Origin '';
-
+        proxy_set_header Connection $connection_upgrade;
         chunked_transfer_encoding off;
 
-        # pass to upstream LB pool
-        proxy_pass http://minio_console;
+
+        proxy_cache_key $request_method$scheme$host$request_uri;
+
+        proxy_cache_convert_head off;
+
+        proxy_cache_revalidate on;
+        proxy_cache_min_uses 3;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        proxy_cache_background_update on;
+        proxy_cache_lock on;
+
+        proxy_ignore_headers Cache-Control;
+        proxy_cache_valid 5m;
+        proxy_cache_methods GET;
+
+        proxy_request_buffering off;
+
+
+        add_header X-ProxyCache "Enabled";
+        add_header X-Cache-Status $upstream_cache_status;
+
+        # Allow any size file to be uploaded.
+        # Set to a value such as 1000m; to restrict file size to a specific value
+        client_max_body_size 0;
+        # Disable buffering
+        proxy_buffering off;
     }
 }
