--- a/nginx/minioui_proxy.conf
+++ b/nginx/minioui_proxy.conf
@@ -1,6 +1,6 @@
-upstream minio_s3 {
+upstream minio_ui {
     least_conn;
-    server minio1.trahan.dev:9000;
+    server 10.0.0.83:9001;
 }
 
 server {
@@ -11,7 +11,7 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name minio.trahan.dev;
+    server_name minioui.trahan.dev;
     ignore_invalid_headers off;
     client_max_body_size 0;
     proxy_buffering off;
@@ -29,7 +29,7 @@ server {
     error_log /var/log/nginx/error.log info;
 
     location / {
-        proxy_pass http://minio_s3;
+        proxy_pass http://minio_ui;
         proxy_set_header Host domain;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
