tweak nginx config

--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -27,8 +27,8 @@ server {
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log info;
-
-    location / {
+    location /
+    {
         proxy_pass http://minio_s3;
         proxy_set_header Host domain;
         proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +39,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         chunked_transfer_encoding off;
-
 
         proxy_cache_key $request_method$scheme$host$request_uri;
 
@@ -66,5 +65,6 @@ server {
         client_max_body_size 0;
         # Disable buffering
         proxy_buffering off;
-    } 
+    }
+
 }
