--- a/nginx/minioui_proxy.conf
+++ b/nginx/minioui_proxy.conf
@@ -23,7 +23,8 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log info;
 
-    location / {
+    location /
+    {
         proxy_pass http://minio_ui;
         proxy_set_header Host domain;
         proxy_set_header X-Real-IP $remote_addr;
@@ -34,7 +35,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         chunked_transfer_encoding off;
-
 
         proxy_cache_key $request_method$scheme$host$request_uri;
 
@@ -61,5 +61,5 @@ server {
         client_max_body_size 0;
         # Disable buffering
         proxy_buffering off;
-    } 
+    }
 }
