--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -27,6 +27,32 @@ server {
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log info;
+
+    # Minio Console (UI)
+    location /console/ {
+
+        # This was really the key for me. Even though the Nginx docs say 
+        # that with a URI part in the `proxy_pass` directive, the `/console/`
+        # URI should automatically be rewritten, this wasn't working for me.
+        rewrite ^/console/(.*)$ /$1 break;
+
+        proxy_pass http://minio_s3:9001;
+
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+
+        proxy_connect_timeout 300;
+
+        # To support websocket
+        # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        chunked_transfer_encoding off;    
+    }
+
     location /
     {
         proxy_pass http://minio_s3;
