added console location to minio_proxy

--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -3,6 +3,11 @@ upstream minio_s3 {
     server minio1.trahan.dev:9000;
 }
 
+upstream minio_console {
+    least_conn;
+    server minio.trahan.dev:9001;
+}
+
 server {
   listen 80 http2 default_server;
   return 301 https://$host$request_uri;
