--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -41,7 +41,7 @@ server {
         # URI should automatically be rewritten, this wasn't working for me.
         rewrite ^/console/(.*)$ /$1 break;
 
-        proxy_pass http://minio_s3:9001;
+        proxy_pass http://minio_console;
 
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
