--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -5,7 +5,7 @@ upstream minio_s3 {
 
 upstream minio_console {
     least_conn;
-    server minio.trahan.dev:9001;
+    server 10.0.0.83:9001;
 }
 
 server {
