--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -60,7 +60,6 @@ server {
 
     location /
     {
-        proxy_pass http://minio_s3;
         proxy_set_header Host domain;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,24 +69,20 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         chunked_transfer_encoding off;
-
         proxy_cache_key $request_method$scheme$host$request_uri;
-
         proxy_cache_convert_head off;
-
         proxy_cache_revalidate on;
         proxy_cache_min_uses 3;
         proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
         proxy_cache_background_update on;
         proxy_cache_lock on;
-
         proxy_ignore_headers Cache-Control;
         proxy_cache_valid 5m;
         proxy_cache_methods GET;
-
         proxy_request_buffering off;
 
 
+        real_ip_header X-Real-IP;
         add_header X-ProxyCache "Enabled";
         add_header X-Cache-Status $upstream_cache_status;
 
@@ -96,6 +91,7 @@ server {
         client_max_body_size 0;
         # Disable buffering
         proxy_buffering off;
+        proxy_pass http://minio_s3;
     }
 
 }
