--- a/nginx/minio_proxy.conf
+++ b/nginx/minio_proxy.conf
@@ -60,9 +60,10 @@ server {
 
     location /
     {
-        proxy_set_header Host domain;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_http_version 1.1;
         # proxy_hide_header Upgrade;
         proxy_set_header X-Forwarded-Proto $scheme;
