--- a/ansible/playbooks/dns/nfttables.conf
+++ b/ansible/playbooks/dns/nfttables.conf
@@ -16,17 +16,17 @@ table inet filter {
   }
 
   chain input {
-    type filter hook input priority 0; policy drop;
+    type filter hook input priority filter; policy drop;
 
     # Allow loopback traffic
-    iif lo accept
+    iif "lo" accept
 
     # Allow established/related traffic
     ct state established,related accept
 
     # Allow ICMP ping (echo-request and echo-reply)
     ip protocol icmp icmp type { echo-request, echo-reply } accept
-    ip6 nexthdr icmpv6 icmpv6 type { echo-request, echo-reply } accept
+    ip6 nexthdr ipv6-icmp icmpv6 type { echo-request, echo-reply } accept
 
     # Allow SSH (port 22) from local network
     ip saddr 10.0.0.0/23 tcp dport 22 accept
@@ -39,15 +39,14 @@ table inet filter {
     ip6 saddr fe80::/64 tcp dport 53 accept
 
     # Allow VRRP from trusted peers only
-    ip protocol 112 ip saddr @vrrp_peers_ipv4 accept
-    ip6 nexthdr 112 ip6 saddr @vrrp_peers_ipv6 accept
+    ip protocol vrrp ip saddr @vrrp_peers_ipv4 accept
+    ip6 nexthdr vrrp ip6 saddr @vrrp_peers_ipv6 accept
 
-    # Drop all other VRRP
-    ip protocol 112 drop
-    ip6 nexthdr 112 drop
+    # Drop all VRRP traffic
+    ip protocol vrrp drop
+    ip6 nexthdr vrrp drop
 
-    # Log and drop everything else (optional)
-    # log prefix "nftables DROP: " flags all
+    # Drop everything else
     drop
   }
 }
